# lak-chemicals-and-hardware

./: .gitignore  README.md  docker-compose.yml
business-server/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
business-server/app/: api.py
business-server/app/config/: open_api_tags.py
business-server/app/constants/: enums.py
business-server/app/models/: order_model.py  quotation_model.py  report_model.py  supplier_model.py
business-server/app/repository/: cart_repo.py  inventory_repo.py  order_repo.py  product_repo.py  quotation_repo.py  report_repo.py  sales_repo.py  supplier_repo.py
business-server/app/routers/: agents_tools_router.py  cart_router.py  inventory_router.py  order_router.py  product_router.py  quotation_router.py  report_router.py  stripe_router.py  supplier_router.py
business-server/app/schemas/: __init__.py  cart_schema.py  inventory_schema.py  order_schema.py  payment_schema.py  quotation_schema.py  report_schema.py  supplier_schema.py
business-server/app/security/: api_key.py  jwt.py
business-server/app/services/: cart_service.py  inventory_service.py  order_service.py  payment_service.py  product_service.py  (+3 more)
business-server/tests/: conftest.py  test_cart_service.py  test_inventory_service.py  test_order_service.py  test_product_service.py  test_quotation_service.py  test_report_service.py  test_supplier_service.py
multi-agent-server/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  server.py
multi-agent-server/app/: api.py
multi-agent-server/tests/: test_add_to_cart_tool.py  test_analytics_router_agent.py  test_genai_llm.py  test_inventory_analytics_agent.py  test_inventory_tool_output.py  test_product_list_tool.py  test_product_performance_agent.py  test_product_summery_tool.py  test_sale_tool_output.py  test_sales_analytics_agent.py  test_sales_prediction_agent.py
server/: .gitignore  pyproject.toml
server/app/: api.py
(+164 files in other folders)
